@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>hexagonal-architecture</artifactId>
         <groupId>com.impaqgroup.training.architecture</groupId>
+        <artifactId>hexagonal-architecture</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -42,6 +42,15 @@
                     <schemaDirectory>${project.basedir}/src/main/resources/schema/</schemaDirectory>
                     <outputDirectory>${project.basedir}/target/generated-sources/jaxb/</outputDirectory>
                     <clearOutputDir>true</clearOutputDir>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.xml.bind</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
